# rpmsg-dma

./: CMakeLists.txt
example/audio_offload/: CMakeLists.txt
example/audio_offload/src/: host_interface.c  rpmsg_audio_example.c
src/: CMakeLists.txt
